--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Test app</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="app/css/styles.css">
 
+    <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-
+    <!-- libraries needed by Angular -->
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <!-- the SystemJS library for module loading -->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
+    <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
@@ -20,6 +23,7 @@
   </head>
 
   <body>
+    <!-- The <my-app> tag in the <body> which is where your app lives! -->
     <my-app>Loading...</my-app>
   </body>
 </html>
