Tutorial until Routing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- https://angular.io/docs/ts/latest/guide/router.html#!#base-href -->    
+    <base href="/">
     <title>Test app</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,6 +26,7 @@
 
   <body>
     <!-- The <my-app> tag in the <body> which is where your app lives! -->
+    <!-- It'll look for a component with selector 'my-app' -->
     <my-app>Loading...</my-app>
   </body>
 </html>
