--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Test app</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" href="app/css/styles.css">
 
     <!-- 1. Load libraries -->
